Devops mine/Terraform/main.tf
provider "aws" {
    region = "us-west-2"
}

data "aws_ami" "amazon_linux" {
  most_recent = true

  owners = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

resource "aws_security_group" "devsecops_sg" {
  name        = "devsecops-sg"
  description = "Allow SSH and app access"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}



resource "aws_instance" "devsecops" {
    ami = data.aws_ami.amazon_linux.id
    instance_type = "t3.micro"
    key_name = "devsecops-key"
    vpc_security_group_ids = [aws_security_group.devsecops_sg.id]
    tags = {
        Name = "devsecops"
    }
}
